# ValueFromLog

./: .gitignore  .pre-commit-config.yaml  PLAN.md  PoC.ipynb  PoC2.ipynb  PoC_3.ipynb  prompt.md  pyproject.toml  sample.ipynb  sample_excel_load.ipynb  加工.ipynb  抽出.ipynb
data/: schema.dbml
prompt/: PROMPT.md
reports/: sweetviz_remote.html  sweetviz_state.html
scripts/: create_poc_notebook.py
src/: data_loader.py  etl.py
src/application/: __init__.py  use_cases.py
src/domain/: models.py  ports.py
src/infrastructure/: __init__.py  cache.py  env_settings.py  excel_repository.py  paths.py
src/interface/: __init__.py  notebook.py
